# nest-simulator

./: ++psvn.state  .#foo  .clang-format  .clang-tidy  .cppcheck_suppressions  .flake8  .git-blame-ignore-revs  .gitignore  .mention-bot  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .rstcheck.cfg  .travis.yml  .vale.ini  ACKNOWLEDGMENTS  ACKNOWLEDGMENTS.md  CHANGES  CMakeLists.txt  CMakeLists.txt.orig  CMakePresets.json  COLAB_INSTRUCTIONS.md  CONTRIBUTING.md  CTestTestfile.cmake  DRAFT-DOC_pinning-threads.rst  IGNORE  INSTALL  INSTALLATION_NOTES.md  Makefile.am  NEST_Google_Colab_Setup.ipynb  NEWS  README  README.md  SECURITY.md  VERSION  _config.yml  _vale.ini  acinclude.m4  bootstrap.sh  (+57 more)
conngen/: CMakeLists.txt  Makefile.am  README.md  README.rst  cg_connect.cpp  cg_connect.h  conngen.cpp  conngen.h  conngendatum.cpp  conngendatum.h  conngenmodule.cpp  conngenmodule.h
doc/: .colorize.rst  0_hello_world.py  1_first_steps.py  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Makefile  Makefile.am  PyNEST_firststeps.ipynb  README.md  README.rst  analog-recording-with-multimeter.md  basics.rst  citing-nest.md  citing-nest.rst  colorize.rst  community.md  community.rst  conda_environment.yml  conf.py  connection-generator-interface.rst  connection-management.md  contents.rst  copyright_header.cpp  copyright_header.music  copyright_header.py  copyright_header.txt  create_model.rst  doc_header.txt  documentation.md  documentation_workflow.rst  download.md  download.rst  environment.yml  extractor_userdocs.py  features.rst  fulldoc.conf  fulldoc.conf.in  getting-help.rst  getting-started.rst  (+32 more)
examples/: BrodyHopfield.py  CMakeLists.txt  CTestTestfile.cmake  CampbellSiegert.py  Makefile.am  README  README.md  aeif_cond_beta_multisynapse.py  balancedneuron.py  brunel_alpha_evolution_strategies.py  brunel_alpha_nest.py  brunel_delta_nest.py  brunel_exp_multisynapse_nest.py  clopath_synapse_small_network.py  clopath_synapse_spike_pairing.py  correlospinmatrix_detector_two_neuron.py  csa_spatial_example.py  evaluate_quantal_stp_synapse.py  firing_patterns_adexp.py  gif_pop_psc_exp.py  gif_population.py  hpc_benchmark.py  if_curve.py  init_nest_adexp.py  intrinsic_currents_spiking.py  intrinsic_currents_subthreshold.py  lin_rate_ipn_network.py  list_examples.sh  mc_neuron.py  one_neuron.py  one_neuron_with_noise.py  plot_weight_matrices.py  pulsepacket.py  recording_demo.py  run_examples.sh  sinusoidal_gamma_generator.py  sinusoidal_poisson_generator.py  store_restore_network.py  structural_plasticity.py  tsodyks_depressing.py  (+4 more)
extras/: CMakeLists.txt  CTestTestfile.cmake  Makefile.am  README.md  automake-pre-1.14-fix.patch  check_code_style.sh  check_copyright_headers.py  check_forbidden_types.sh  check_unused_names.py  ci.sh  ci_build.sh  compile_bluegene.txt  conda-env-nest-simulator.yml  conda-nest-dev.yml  conda-nest-simulator-dev.yml  create_rcsinfo.sh  create_release.sh  create_release.sh.in  find_imports.py  format_all_c_c++_files.sh  gha_build.sh  include_checker.py  inline.py  inline_sli.py  install_autotools.sh  install_csa-libneurosim.sh  install_libboost.sh  install_music.sh  install_sionlib.sh  libtool-1.5-fix.patch  libtool-echo-fix.patch  nest-config.in  nest-server  nest-server-mpi  nest-simulator-doc-requirements.txt  nest-web  nest_indirect  nest_serial  nest_vars.sh  nest_vars.sh.in  (+9 more)
lib/: CMakeLists.txt  CTestTestfile.cmake  Makefile.am  README.md
libnestutil/: CMakeLists.txt  CMakeLists.txt.orig  CTestTestfile.cmake  Makefile.am  README.md  allocator.cpp  allocator.h  beta_normalization_factor.h  block_vector.h  compose.hpp  config.h.in  connection_generator.cpp  connection_generator.h  dict_util.h  dictionary.cpp  dictionary.h  dictionary_access_flag_manager.cpp  dictionary_access_flag_manager.h  enum_bitfield.h  hashtable-common.h  iaf_propagator.cpp  iaf_propagator.h  instance.h  iterator_pair.h  libc_allocator_with_realloc.h  lockptr.h  logging.h  logging_event.cpp  logging_event.h  logging_manager.cpp  logging_manager.h  manager_interface.h  mutex.h  nest_types.h  numerics.cpp  numerics.h  propagator_stability.cpp  propagator_stability.h  propagators.cpp  propagators.h  (+14 more)
librandom/: CMakeLists.txt  CTestTestfile.cmake  Makefile.am  README  README.md  binomial_randomdev.cpp  binomial_randomdev.h  clipped_randomdev.h  config.in  exp_randomdev.cpp  exp_randomdev.h  gamma_randomdev.cpp  gamma_randomdev.h  gsl_binomial_randomdev.cpp  gsl_binomial_randomdev.h  gslrandomgen.cpp  gslrandomgen.h  knuthlfg.cpp  knuthlfg.h  librandom.h  librandom_exceptions.h  librandom_names.cpp  librandom_names.h  lognormal_randomdev.cpp  lognormal_randomdev.h  mt19937.cpp  mt19937.h  normal_randomdev.cpp  normal_randomdev.h  poisson_randomdev.cpp  poisson_randomdev.h  random.cpp  random.h  random_datums.h  random_numbers.cpp  random_numbers.h  randomdev.cpp  randomdev.h  randomgen.cpp  randomgen.h  (+9 more)
models/: .clopath_synapse.h.swp  CMakeLists.txt  CTestTestfile.cmake  Makefile.am  README  README.md  ac_generator.cpp  ac_generator.h  aeif_cbvg_2010.cpp  aeif_cbvg_2010.h  aeif_cond_2exp_multisynapse.cpp  aeif_cond_2exp_multisynapse.h  aeif_cond_alpha.cpp  aeif_cond_alpha.h  aeif_cond_alpha_RK5.cpp  aeif_cond_alpha_RK5.h  aeif_cond_alpha_RK5_gridprecise.cpp  aeif_cond_alpha_astro.cpp  aeif_cond_alpha_astro.h  aeif_cond_alpha_gp.cpp  aeif_cond_alpha_gp.h  aeif_cond_alpha_gridprecise.cpp  aeif_cond_alpha_gridprecise.h  aeif_cond_alpha_gsl.cpp  aeif_cond_alpha_gsl.h  aeif_cond_alpha_multisynapse.cpp  aeif_cond_alpha_multisynapse.h  aeif_cond_beta_multisynapse.cpp  aeif_cond_beta_multisynapse.h  aeif_cond_exp.cpp  aeif_cond_exp.h  aeif_cond_exp_gp.cpp  aeif_cond_exp_gp.h  aeif_cond_exp_gridprecise.cpp  aeif_cond_exp_gridprecise.h  aeif_psc_alpha.cpp  aeif_psc_alpha.h  aeif_psc_alpha_gp.cpp  aeif_psc_alpha_gp.h  aeif_psc_alpha_gridprecise.cpp  (+475 more)
nest/: CMakeLists.txt  CTestTestfile.cmake  Makefile.am  README.md  main.cpp  nest.cpp  nest.h  neststartup.cpp  neststartup.h  sli_neuron.cpp  sli_neuron.h
nestkernel/: CMakeLists.txt  CTestTestfile.cmake  CommonInterface.cpp  (+386 more)
(+9467 files in other folders)
